--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: 3D52A0">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #3D52A0">
   <div class="container">
     <a class="navbar-brand" href="#">Faris</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
