--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
         <!-- Jumbotron -->
         <section class="jumbotron">
+          <img src="img/profile.jpg" alt="Fariskha Agustino Farendra" />
             <h1 class="display-4">Hello, world!</h1>
             <p class="lead">
                 This is a simple hero unit, a simple jumbotron-style component
