--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <!-- Jumbotron -->
         <section class="jumbotron">
-          <img src="img/profile.jpg" alt="Fariskha Agustino Farendra" />
+            <img src="img/profile.jpg" alt="Fariskha Agustino Farendra" />
             <h1 class="display-4">Hello, world!</h1>
             <p class="lead">
                 This is a simple hero unit, a simple jumbotron-style component
@@ -73,10 +73,11 @@
                 content out within the larger container.
             </p>
             <a class="btn btn-primary btn-lg" href="#" role="button"
-                >Learn more</a>
+                >Learn more</a
+            >
         </section>
         <!-- Akhir Jumbotron -->
-        
+
         <!-- Javascript -->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
