--- a/index.html
+++ b/index.html
@@ -1,89 +1,88 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <!-- Bootstrap CSS -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-            crossorigin="anonymous"
-        />
+<!-- Bootstrap CSS -->
+<link
+href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+rel="stylesheet"
+integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+crossorigin="anonymous"
+/>
 
-        <!-- css -->
-        <link rel="stylesheet" href="css/style.css" />
+<!-- css -->
+<link rel="stylesheet" href="css/style.css" />
 
-        <title>Portfolio | Faris</title>
-    </head>
-    <body>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
-            <div class="container">
-                <a class="navbar-brand" href="#">Fariskha Agustino Farendra</a>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav"
-                    aria-controls="navbarNav"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a
-                                class="nav-link active"
-                                aria-current="page"
-                                href="#"
-                                >Home</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Prestasi</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Review</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- Akhir Navbar -->
+<title>Portfolio | Faris</title>
+</head>
+<body>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
+<div class="container">
+<a class="navbar-brand" href="#">Fariskha Agustino Farendra</a>
+<button
+class="navbar-toggler"
+type="button"
+data-bs-toggle="collapse"
+data-bs-target="#navbarNav"
+aria-controls="navbarNav"
+aria-expanded="false"
+aria-label="Toggle navigation"
+>
+<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarNav">
+<ul class="navbar-nav ms-auto">
+<li class="nav-item">
+<a
+class="nav-link active"
+aria-current="page"
+href="#"
+>Home</a
+>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="#">About</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="#">Prestasi</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="#">Review</a>
+</li>
+</ul>
+</div>
+</div>
+</nav>
+<!-- Akhir Navbar -->
 
-        <!-- Jumbotron -->
-        <section class="jumbotron">
-            <img
-                src="img/profile.jpg"
-                alt="Fariskha Agustino Farendra"
-                width="200px"
-            />
-            <h1 class="display-4">Hello, world!</h1>
-            <p class="lead">
-                This is a simple hero unit, a simple jumbotron-style component
-                for calling extra attention to featured content or information.
-            </p>
-            <hr class="my-4" />
-            <p>
-                It uses utility classes for typography and spacing to space
-                content out within the larger container.
-            </p>
-        </section>
-        <!-- Akhir Jumbotron -->
+<!-- Jumbotron -->
+<section class="jumbotron">
+<img
+src="img/profile.jpg"
+alt="Fariskha Agustino Farendra" width="200px"
+/>
+<h1 class="display-4">Hello, world!</h1>
+<p class="lead">
+This is a simple hero unit, a simple jumbotron-style component
+for calling extra attention to featured content or information.
+</p>
+<hr class="my-4" />
+<p>
+It uses utility classes for typography and spacing to space
+content out within the larger container.
+</p>
+</section>
+<!-- Akhir Jumbotron -->
 
-        <!-- Javascript -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+<!-- Javascript -->
+<script
+src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+crossorigin="anonymous"
+></script>
+</body>
 </html>
