--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
         <section class="jumbotron text-center">
             <img
                 src="img/profile.jpg"
-                alt="Fariskha Agustino Farendra"
-                width="200px"
+                alt="Fariskha Agustino Farendra" width="200px"
             />
             <h1 class="display-4">Hello, world!</h1>
             <p class="lead">
