--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
                 alt="Fariskha Agustino Farendra"
                 width="200px"
             />
-            <h1 class="display-4">Hello, world!</h1>
+            <h1 class="display-4"Fariskha Agustino Farendra</h1>
             <p class="lead">
-                This is a simple hero unit, a simple jumbotron-style component
-                for calling extra attention to featured content or information.
+                Saya adalah seorang pelajar yang hobi dalam membuat / memodifikasi suatu program
             </p>
             <hr class="my-4" />
             <p>
