--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 alt="Fariskha Agustino Farendra"
                 width="200px"
             />
-            <h1 class="display-4"Fariskha Agustino Farendra</h1>
+            <h1 class="display-4">Fariskha Agustino Farendra</h1>
             <p class="lead">
                 Saya adalah seorang pelajar yang hobi dalam membuat / memodifikasi suatu program
             </p>
