--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             />
             <h1 class="display-4">Fariskha Agustino Farendra</h1>
             <p class="lead">
-                Saya adalah seorang pelajar yang hobi dalam membuat / memodifikasi suatu program
+                Student | Progammer
             </p>
             <hr class="my-4" />
             <p>
