--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
                 width="200px"
             />
             <h1 class="display-4">Fariskha Agustino Farendra</h1>
-            <p class="lead">
-                Student | Progammer
-            </p>
+            <p class="lead">Student | Progammer</p>
             <hr class="my-4" />
             <p>
                 It uses utility classes for typography and spacing to space
