--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             <img
                 src="img/profile.jpg"
                 alt="Fariskha Agustino Farendra"
-                width="200px" class="rounded-circle"
+                width="200px"
+                class="rounded-circle"
             />
             <h1 class="display-4">Fariskha Agustino Farendra</h1>
             <p class="lead">Student | Progammer</p>
