--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 src="img/profile.jpg"
                 alt="Fariskha Agustino Farendra"
                 width="200px"
-                class="rounded-circle"
+                class="rounded-circle img-thumbnail"
             />
             <h1 class="display-4">Fariskha Agustino Farendra</h1>
             <p class="lead">Student | Progammer</p>
