--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
             </svg>
         </section>
         <!-- Akhir Jumbotron -->
+        
+        <!-- About -->
+        <section id="ababout
+        <div class="container">
+          <div class="row">
+          </div>
+        </div>
+        </section>
+        <!-- Akhir About -->
 
         <!-- Javascript -->
         <script
