--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!-- Akhir Jumbotron -->
         
         <!-- About -->
-        <section id="ababout
+        <section id="about">
         <div class="container">
           <div class="row">
           </div>
