--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
         <!-- About -->
         <section id="about">
             <div class="container">
-                <div class="row">
-                </div>
+                <div class="row"></div>
             </div>
         </section>
         <!-- Akhir About -->
