--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
         <!-- About -->
         <section id="about">
             <div class="container">
-                <div class="row"></div>
+                <div class="row">
+                  <div class="col">
+                    <h2>About Me</h2>
+                  </div>
+                </div>
             </div>
         </section>
         <!-- Akhir About -->
