--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
                         <h2>About Me</h2>
                     </div>
                 </div>
+                <div class="row">
+               <div class="col">
+               </div>
+               <div class="col">
+                 
+               </div>
+                </div>
             </div>
         </section>
         <!-- Akhir About -->
