--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
                     </div>
                 </div>
                 <div class="row">
-               <div class="col">
-               </div>
-               <div class="col">
-                 
-               </div>
+                    <div class="col">
+                      <p>dolor fugiat et ipsum cillum minim et do proident aliquip ad Lorem amet qui eiusmod sit dolor cillum ad eiusmod</p>
+                    </div>
+                    <div class="col">
+                      qui ex duis quis voluptate est officia dolor eu esse laboris laborum ad mollit dolore in magna ipsum quis id mollit aute duis in adipisicing
+                    </div>
                 </div>
             </div>
         </section>
