--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
         <!-- About -->
         <section id="about">
             <div class="container">
-                <div class="row">
+                <div class="row text-center">
                     <div class="col">
                         <h2>About Me</h2>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col">
                       <p>dolor fugiat et ipsum cillum minim et do proident aliquip ad Lorem amet qui eiusmod sit dolor cillum ad eiusmod</p>
                     </div>
