--- a/index.html
+++ b/index.html
@@ -89,10 +89,16 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col">
-                      <p>dolor fugiat et ipsum cillum minim et do proident aliquip ad Lorem amet qui eiusmod sit dolor cillum ad eiusmod</p>
+                        <p>
+                            dolor fugiat et ipsum cillum minim et do proident
+                            aliquip ad Lorem amet qui eiusmod sit dolor cillum
+                            ad eiusmod
+                        </p>
                     </div>
                     <div class="col">
-                      qui ex duis quis voluptate est officia dolor eu esse laboris laborum ad mollit dolore in magna ipsum quis id mollit aute duis in adipisicing
+                        qui ex duis quis voluptate est officia dolor eu esse
+                        laboris laborum ad mollit dolore in magna ipsum quis id
+                        mollit aute duis in adipisicing
                     </div>
                 </div>
             </div>
