--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col">
+                    <div class="col-4 fs-5 text-center">
                         <p>
                             dolor fugiat et ipsum cillum minim et do proident
                             aliquip ad Lorem amet qui eiusmod sit dolor cillum
                             ad eiusmod
                         </p>
                     </div>
-                    <div class="col">
+                    <div class="col-4 fs-5 text-center">
                         qui ex duis quis voluptate est officia dolor eu esse
                         laboris laborum ad mollit dolore in magna ipsum quis id
                         mollit aute duis in adipisicing
