--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- About -->
         <section id="about">
             <div class="container">
-                <div class="row text-center">
+                <div class="row text-center mb-3">
                     <div class="col">
                         <h2>About Me</h2>
                     </div>
