--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                         </p>
                     </div>
                     <div class="col-4 fs-5 text-center">
-                        qui ex duis quis voluptate est officia dolor eu esse
+                        <p>qui ex duis quis voluptate est officia dolor eu esse
                         laboris laborum ad mollit dolore in magna ipsum quis id
-                        mollit aute duis in adipisicing
+                        mollit aute duis in adipisicing</p>
                     </div>
                 </div>
             </div>
