--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
             </svg>
         </section>
         <!-- Akhir About -->
+        
+        <!-- Projects -->
+        <section id="projects">
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <h2>My Projects</h2>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Akhir Projects -->
 
         <!-- Javascript -->
         <script
