--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <!-- Projects -->
         <section id="projects">
             <div class="container">
-                <div class="row">
+                <div class="row text-center">
                     <div class="col">
                         <h2>My Projects</h2>
                     </div>
