--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-10 fs-5 text-start">
+                    <div class="col-10 fs-5 text-center">
                         <p>
                             dolor fugiat et ipsum cillum minim et do proident
                             aliquip ad Lorem amet qui eiusmod sit dolor cillum
