--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
                             ad eiusmod
                         </p>
                     </div>
+                    <div class="col-10 fs-5 text-center">
+                        <p>
+                            dolor fugiat et ipsum cillum minim et do proident
+                            aliquip ad Lorem amet qui eiusmod sit dolor cillum
+                            ad eiusmod
+                        </p>
+                    </div>
                 </div>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
