--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- css -->
         <link rel="stylesheet" href="css/style.css" />
 
-        <title>Portfolio | Faris</title>
+        <title>Portfolio | Fariskha Agustino Farendra</title>
     </head>
     <body>
         <!-- Navbar -->
