--- a/index.html
+++ b/index.html
@@ -122,6 +122,16 @@
                         <h2>My Projects</h2>
                     </div>
                 </div>
+                <div class="row">
+                  <div class="col-4">
+                    <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+                  </div>
+                </div>
             </div>
         </section>
         <!-- Akhir Projects -->
