--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="row">
                     <div class="col-4">
                         <div class="card" style="width: 18rem">
-                            <img src="..." class="card-img-top" alt="..." />
+                            <img src="img/projects/p1.png" class="card-img-top" alt="..." />
                             <div class="card-body">
                                 <p class="card-text">
                                     Some quick example text to build on the card
