--- a/index.html
+++ b/index.html
@@ -124,8 +124,12 @@
                 </div>
                 <div class="row">
                     <div class="col-4">
-                        <div class="card" style="width: 18rem">
-                            <img src="img/projects/p1.png" class="card-img-top" alt="..." />
+                        <div class="card">
+                            <img
+                                src="img/projects/p1.png"
+                                class="card-img-top"
+                                alt="..."
+                            />
                             <div class="card-body">
                                 <p class="card-text">
                                     Some quick example text to build on the card
