--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-6 fs-5 text-center">
+                    <div class="col-md-6 fs-5 text-center">
                         <p>
                             dolor fugiat et ipsum cillum minim et do proident
                             aliquip ad Lorem amet qui eiusmod sit dolor cillum
                             ad eiusmod
                         </p>
                     </div>
-                    <div class="col-6 fs-5 text-center">
+                    <div class="col-md-6 fs-5 text-center">
                         <p>
                             dolor fugiat et ipsum cillum minim et do proident
                             aliquip ad Lorem amet qui eiusmod sit dolor cillum
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <div class="card">
                             <img
                                 src="img/projects/p1.png"
