--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-3">
                         <div class="card">
                             <img
                                 src="img/projects/p1.png"
