--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 src="img/profile.jpg"
                 alt="Fariskha Agustino Farendra"
                 width="200px"
-                class="rounded-circle img-thumbnail"
+                class="rounded-circle img-thumbnail mb-3"
             />
             <h1 class="display-4">Fariskha Agustino Farendra</h1>
             <p class="lead">Student | Progammer</p>
@@ -122,7 +122,7 @@
                         <h2>My Projects</h2>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mb-3">
                     <div class="col-md-4 mb-3">
                         <div class="card">
                             <img
