--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
             </div>
         </section>
         <!-- Akhir Projects -->
+        
+        <!-- Comment -->
+        <section id="comment">
+          
+        </section>
+        <!-- Akhir Comment -->
 
         <!-- Javascript -->
         <script
