--- a/index.html
+++ b/index.html
@@ -159,11 +159,9 @@
             </div>
         </section>
         <!-- Akhir Projects -->
-        
+
         <!-- Comment -->
-        <section id="comment">
-          
-        </section>
+        <section id="comment"></section>
         <!-- Akhir Comment -->
 
         <!-- Javascript -->
