--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
         <section class="jumbotron text-center">
             <img
                 src="img/profile.jpg"
-                alt="Fariskha Agustino Farendra"
-                class="rounded-circle img-thumbnail mb-3"
+                alt="Fariskha Agustino Farendra" class="rounded-circle img-thumbnail mb-3"
             />
             <h1 class="display-4">Fariskha Agustino Farendra</h1>
             <p class="lead">Student | Progammer</p>
