--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         <section class="jumbotron text-center">
             <img
                 src="img/profile.jpg"
-                alt="Fariskha Agustino Farendra" width="200px"
+                alt="Fariskha Agustino Farendra"
+                width="200px"
                 class="rounded-circle img-thumbnail mb-3"
             />
             <h1 class="display-4">Fariskha Agustino Farendra</h1>
