--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <!-- Projects -->
         <section id="projects">
             <div class="container">
-                <div class="row text-center">
+                <div class="row text-center mb-3">
                     <div class="col">
                         <h2>My Projects</h2>
                     </div>
