--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
                 <div class="row mb-3">
                     <div class="col-md-4 mb-3">
-                        <div class="card shadow-lg">
+                        <div class="card shadow-sm">
                             <img
                                 src="img/projects/p1.png"
                                 class="card-img-top"
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
-                        <div class="card">
+                        <div class="card shadow-sm">
                             <img
                                 src="img/projects/p1.png"
                                 class="card-img-top"
