--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <!-- Comment -->
         <section id="comment">
             <div class="row">
-                <div class="col-md">
+                <div class="col-md-12">
                     <div id="disqus_thread"></div>
                     <script>
                         /**
