--- a/index.html
+++ b/index.html
@@ -159,15 +159,15 @@
             </div>
         </section>
         <!-- Akhir Projects -->
-        
+
         <!-- Contact -->
         <section id="contact">
-          <div class="contact">
-            <h3>Contact</h3>
-          </div>
+            <div class="contact text-center fs-6">
+                <h3>Contact</h3>
+            </div>
         </section>
         <!-- Akhir Contact -->
-        
+
         <!-- Javascript -->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
