--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 
         <!-- Contact -->
         <section id="contact">
-            <div class="contact text-center fs-6">
-                <h3>Contact</h3>
+            <div class="contact text-center">
+                <h2>Contact</h2>
             </div>
         </section>
         <!-- Akhir Contact -->
