--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
         <section id="contact">
             <div class="contact text-center">
                 <h2>Contact</h2>
+                <i class="bi bi-whatsapp"></i>
             </div>
         </section>
         <!-- Akhir Contact -->
