--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <section id="contact">
             <div class="contact text-center">
                 <h2>Contact</h2>
-                <a href="https://wa.me/6281337232587" class="text-black">
+                <a href="https://wa.me/6281337232587" class="text-dark">
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
