--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
                 <!-- Logo IG -->
                 <a
                     href="https://www.instagram.com/fariskhafarendra?igsh=bDIyNHR2Nms1cGxm"
-                    class="text-dark">
+                    class="text-dark"
+                >
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
