--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             </div>
             <div class="logo text-center">
                 <!-- Logo WA -->
+                <div class="logowa p-3">
                 <a href="https://wa.me/6281337232587" class="text-dark">
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -181,7 +182,10 @@
                         />
                     </svg>
                 </a>
+                </div>
+                </div>
                 <!-- Logo IG -->
+                <div class="logoig p-3">
                 <a
                     href="https://www.instagram.com/fariskhafarendra?igsh=bDIyNHR2Nms1cGxm"
                     class="text-dark"
@@ -199,6 +203,7 @@
                         />
                     </svg>
                 </a>
+                </div>
             </div>
         </section>
         <!-- Akhir Contact -->
