--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
                         </svg>
                     </a>
                 </div>
+                </div>
+                </div>
         </section>
         <!-- Akhir Contact -->
 
