--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <h2>About Me</h2>
                     </div>
                 </div>
-                <div class="row justify-content-center">
+                <div class="row text-center">
                     <!-- Logo WA -->
                     <div class="col p-3">
                         <a href="https://wa.me/6281337232587" class="text-dark">
