--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </div>
                 <div class="row text-center">
                     <!-- Logo WA -->
-                    <div class="col-1 p-3">
+                    <div class="col-1 p-3 text-center">
                         <a href="https://wa.me/6281337232587" class="text-dark">
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -187,7 +187,7 @@
                         </a>
                     </div>
                     <!-- Logo IG -->
-                    <div class="col-1 p-3">
+                    <div class="col-1 p-3 text-center">
                         <a
                             href="https://www.instagram.com/fariskhafarendra?igsh=bDIyNHR2Nms1cGxm"
                             class="text-dark"
