--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
                         </a>
                     </div>
                     <div class="col-1 p-3 text-center">
-                        <a href="https://www.tiktok.com/@fariskhafarendra?_r=1&_d=eamm5a4l36lgb0&sec_uid=MS4wLjABAAAAmh7hRfy8382HO3w98jfA_ZaUitZUm-wvdje8vV1CRdpsO7xXjCay8dT4ckfzzZug&share_author_id=6769082706276025346&sharer_language=id&source=h5_t&u_code=d9k7hk4710477i&timestamp=1718995122&user_id=6769082706276025346&sec_user_id=MS4wLjABAAAAmh7hRfy8382HO3w98jfA_ZaUitZUm-wvdje8vV1CRdpsO7xXjCay8dT4ckfzzZug&utm_source=copy&utm_campaign=client_share&utm_medium=android&share_iid=7379386686357260038&share_link_id=e73026b3-1d89-4a7d-b67a-a0a265b2d82b&share_app_id=1180&ugbiz_name=ACCOUNT&ug_btm=b8727%2Cb0229&social_share_type=5&enable_checksum=1"
+                        <a
+                            href="https://www.tiktok.com/@fariskhafarendra?_r=1&_d=eamm5a4l36lgb0&sec_uid=MS4wLjABAAAAmh7hRfy8382HO3w98jfA_ZaUitZUm-wvdje8vV1CRdpsO7xXjCay8dT4ckfzzZug&share_author_id=6769082706276025346&sharer_language=id&source=h5_t&u_code=d9k7hk4710477i&timestamp=1718995122&user_id=6769082706276025346&sec_user_id=MS4wLjABAAAAmh7hRfy8382HO3w98jfA_ZaUitZUm-wvdje8vV1CRdpsO7xXjCay8dT4ckfzzZug&utm_source=copy&utm_campaign=client_share&utm_medium=android&share_iid=7379386686357260038&share_link_id=e73026b3-1d89-4a7d-b67a-a0a265b2d82b&share_app_id=1180&ugbiz_name=ACCOUNT&ug_btm=b8727%2Cb0229&social_share_type=5&enable_checksum=1"
                             class="text-dark"
                         >
                             <svg
@@ -225,13 +226,23 @@
                         </a>
                     </div>
                     <div class="col-1 p-3 text-center">
-                      
-                      <!-- Logo FB -->
-                      <a href="https://www.facebook.com/share/FMZ77p8wH2KNHf34/?mibextid=qi2Omg">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-  <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
-</svg>
-                      </a>
+                        <!-- Logo FB -->
+                        <a
+                            href="https://www.facebook.com/share/FMZ77p8wH2KNHf34/?mibextid=qi2Omg"
+                        >
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="16"
+                                height="16"
+                                fill="currentColor"
+                                class="bi bi-facebook"
+                                viewBox="0 0 16 16"
+                            >
+                                <path
+                                    d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"
+                                />
+                            </svg>
+                        </a>
                     </div>
                 </div>
             </div>
