--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
             crossorigin="anonymous"
         />
-        
-                <!-- Javascript -->
+
+        <!-- Javascript -->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -274,6 +274,11 @@
             </svg>
         </section>
         <!-- Akhir Contact -->
-
+        
+        <!-- Footer -->
+        <footer class="footer text-white">
+          <p>Created with love by <a href="https://www.instagram.com/fariskhafarendra?igsh=bbDIyNHR2Nms1cGxm" class="text white">Fariskha Agustino Farendra</a></p>
+        </footer>
+        <!-- Akhir Footer -->
     </body>
 </html>
