--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         
         <!-- Footer -->
         <footer class="footer text-white">
-          <p>Created with love by <a href="https://www.instagram.com/fariskhafarendra?igsh=bbDIyNHR2Nms1cGxm" class="text white">Fariskha Agustino Farendra</a></p>
+          <p>Created with love by <a href="https://www.instagram.com/fariskhafarendra?igsh=bbDIyNHR2Nms1cGxm" class="text-white">Fariskha Agustino Farendra</a></p>
         </footer>
         <!-- Akhir Footer -->
     </body>
