--- a/index.html
+++ b/index.html
@@ -274,11 +274,20 @@
             </svg>
         </section>
         <!-- Akhir Contact -->
-        
+
         <!-- Footer -->
+        <div class="footer">
         <footer class="footer text-white">
-          <p>Created with love by <a href="https://www.instagram.com/fariskhafarendra?igsh=bbDIyNHR2Nms1cGxm" class="text-white">Fariskha Agustino Farendra</a></p>
+            <p>
+                Created with love by
+                <a
+                    href="https://www.instagram.com/fariskhafarendra?igsh=bbDIyNHR2Nms1cGxm"
+                    class="text-white"
+                    >Fariskha Agustino Farendra</a
+                >
+            </p>
         </footer>
+      </div>
         <!-- Akhir Footer -->
     </body>
 </html>
