--- a/index.html
+++ b/index.html
@@ -277,17 +277,17 @@
 
         <!-- Footer -->
         <div class="footer">
-        <footer class="footer text-white">
-            <p>
-                Created with love by
-                <a
-                    href="https://www.instagram.com/fariskhafarendra?igsh=bbDIyNHR2Nms1cGxm"
-                    class="text-white"
-                    >Fariskha Agustino Farendra</a
-                >
-            </p>
-        </footer>
-      </div>
+          <footer class="footer text-white pb-5">
+                <p>
+                    Created with love by
+                    <a
+                        href="https://www.instagram.com/fariskhafarendra?igsh=bbDIyNHR2Nms1cGxm"
+                        class="text-white"
+                        >Fariskha Agustino Farendra</a
+                    >
+                </p>
+            </footer>
+        </div>
         <!-- Akhir Footer -->
     </body>
 </html>
