--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@
 
         <!-- Footer -->
         <div class="footer">
-          <footer class="footer text-white pb-5">
+          <footer class="footer text-white text-center pb-5">
                 <p>
                     Created with love by
                     <a
                         href="https://www.instagram.com/fariskhafarendra?igsh=bbDIyNHR2Nms1cGxm"
-                        class="text-white"
+                        class="text-white fw-bold"
                         >Fariskha Agustino Farendra</a
                     >
                 </p>
