--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
             crossorigin="anonymous"
         />
-
+<!-- Bootstrap Font Icon CSS -->
+    <link rel="stylesheet" href=
+"https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+</head>
         <!-- Javascript -->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -277,7 +280,7 @@
 
         <!-- Footer -->
         <div class="footer">
-          <footer class="footer text-white text-center pb-5">
+            <footer class="footer text-white text-center pb-5">
                 <p>
                     Created with love by
                     <a
