--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
             crossorigin="anonymous"
         />
-<!-- Bootstrap Font Icon CSS -->
-    <link rel="stylesheet" href=
-"https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+        <!-- Bootstrap Font Icon CSS -->
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+        />
         <!-- Javascript -->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -281,7 +283,7 @@
         <div class="footer">
             <footer class="footer text-white text-center pb-5">
                 <p>
-                    Created with love by
+                    Created with <i class="bi bi-heart-fill text-danger"></i> by
                     <a
                         href="https://www.instagram.com/fariskhafarendra?igsh=bbDIyNHR2Nms1cGxm"
                         class="text-white fw-bold"
