--- a/index.html
+++ b/index.html
@@ -209,9 +209,18 @@
                         <a
                             href="https://www.tiktok.com/@fariskhafarendra?_r=1&_d=eamm5a4l36lgb0&sec_uid=MS4wLjABAAAAmh7hRfy8382HO3w98jfA_ZaUitZUm-wvdje8vV1CRdpsO7xXjCay8dT4ckfzzZug&share_author_id=6769082706276025346&sharer_language=id&source=h5_t&u_code=d9k7hk4710477i&timestamp=1718995122&user_id=6769082706276025346&sec_user_id=MS4wLjABAAAAmh7hRfy8382HO3w98jfA_ZaUitZUm-wvdje8vV1CRdpsO7xXjCay8dT4ckfzzZug&utm_source=copy&utm_campaign=client_share&utm_medium=android&share_iid=7379386686357260038&share_link_id=e73026b3-1d89-4a7d-b67a-a0a265b2d82b&share_app_id=1180&ugbiz_name=ACCOUNT&ug_btm=b8727%2Cb0229&social_share_type=5&enable_checksum=1"
                             class="text-dark"
-                            ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok" viewBox="0 0 16 16">
-  <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/>
-</svg></a>
+                            ><svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="16"
+                                height="16"
+                                fill="currentColor"
+                                class="bi bi-tiktok"
+                                viewBox="0 0 16 16"
+                            >
+                                <path
+                                    d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"
+                                /></svg
+                        ></a>
                     </div>
 
                     <!-- Logo FB -->
