--- a/index.html
+++ b/index.html
@@ -245,7 +245,10 @@
         <!-- Akhir Contact -->
 
         <!-- Footer -->
-        <div class="footer text-white text-center pb-5">
+        <div class="footer">
+          <footer class="text-white text-center pb-5">
+            
+          
             <p>
                 Created with <i class="bi bi-heart-fill text-danger"></i> by
                 <a
@@ -254,6 +257,7 @@
                     >Fariskha Agustino Farendra</a
                 >
             </p>
+            </footer>
         </div>
         <!-- Akhir Footer -->
     </body>
