--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-md-6 fs-5 text-center">
+                    <div class="col-md-8 fs-5 text-center">
                         <p>
                             Perkenalkan nama saya
                             <b>Fariskha Agustino Farenda</b> a.k.a <b>Faris</b>.
@@ -108,12 +108,16 @@
                             program.
                         </p>
                     </div>
-                    <div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-</div>
+                    <div class="card" style="width: 18rem">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">
+                                Some quick example text to build on the card
+                                title and make up the bulk of the card's
+                                content.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
