--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
                             program.
                         </p>
                     </div>
+                    <div class="col-md-6">
+                      
+                    
                     <div class="card" style="width: 18rem">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -117,6 +120,7 @@
                                 content.
                             </p>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
