--- a/index.html
+++ b/index.html
@@ -108,14 +108,15 @@
                             program.
                         </p>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 text-center">
                         <div class="card" style="width: 18rem">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Pendidikan</h5>
                                 <p class="card-text">
-                                    Some quick example text to build on the card
-                                    title and make up the bulk of the card's
-                                    content.
+                                  <ul>
+                                    <li>Sdn boro</li>
+                                    <li>smpn 1</li>
+                                  </ul>
                                 </p>
                             </div>
                         </div>
