--- a/index.html
+++ b/index.html
@@ -113,10 +113,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">Pendidikan</h5>
                                 <p class="card-text">
-                                  <ul>
-                                    <li>Sdn boro</li>
-                                    <li>smpn 1</li>
-                                  </ul>
+                                  <p>• SDN 1</p>
+                                  <p>• SMPN</p>
                                 </p>
                             </div>
                         </div>
