--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Pendidikan</h5>
                                 <p class="card-text">
-                                  <p>• SDN 1</p>
-                                  <p>• SMPN </p>
+                                 test
                                 </p>
                             </div>
                         </div>
