--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
                         <div class="card" style="width: 18rem">
                             <div class="card-body">
                                 <h5 class="card-title">Pendidikan</h5>
-                                <p class="card-text">
-                                 test
-                                </p>
+                                <p class="card-text">test</p>
                             </div>
                         </div>
                     </div>
