--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
                             program.
                         </p>
                     </div>
-                    <div class="col-md-6 mb-3 justify-content-center text-center">
-                        <div class="card" style="width: 18rem">
+                    <div
+                        class="col-md-6 mb-3 justify-content-center text-center"
+                    >
+                        <div class="card justify-content-center" style="width: 18rem">
                             <div class="card-body">
                                 <h5 class="card-title">Pendidikan</h5>
                                 <p class="card-text">test</p>
