--- a/index.html
+++ b/index.html
@@ -104,11 +104,10 @@
                             Perkenalkan nama saya
                             <b>Fariskha Agustino Farenda</b> a.k.a <b>Faris</b>.
                             Saya berusia <b>15</b> tahun. Saya adalah seorang
-                            pelajar yang hobi membuat / memodifikasi suatu
-                            program.
+                            pelajar yang hobi <b>membuat / memodifikasi</b> suatu
+                            <b>prograb</b>.
                         </p>
                     </div>
-                    
                 </div>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
