--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                             Perkenalkan nama saya
                             <b>Fariskha Agustino Farenda</b> a.k.a <b>Faris</b>.
                             Saya berusia <b>15</b> tahun. Saya adalah seorang
-                            pelajar yang hobi <b>membuat / memodifikasi</b> suatu
-                            <b>prograb</b>.
+                            pelajar yang hobi
+                            <b>membuat / memodifikasi</b> suatu <b>program</b>.
                         </p>
                     </div>
                 </div>
