--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="col-md-6 mb-3">
                         <div class="card shadow-sm">
                             <div class="card-body">
-                                <p class="card-text"><b>Education</b><br/></br>•Sdn
+                                <p class="card-text"><p><b>Education</0><br/></br>•Sdn<p/>
                                 </p>
                             </div>
                         </div>
