--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="col-md-6 mb-3">
                         <div class="card shadow-sm">
                             <div class="card-body">
-                                <p class="card-text"><p><b>Education</b><br/></br>• SDN Boro <I>(2015-2021)<i/><p/>
+                                <p class="card-text"><p><b>Education</b><br/><br/>• SDN Boro <I>(2015-2021)</i><p/>
                                 </p>
                             </div>
                         </div>
