--- a/index.html
+++ b/index.html
@@ -127,9 +127,7 @@
                         <div class="card shadow-sm">
                             <div class="card-body">
                                 <p class="card-text">
-                                    Some quick example text to build on the card
-                                    title and make up the bulk of the card's
-                                    content.
+                                    <p><b>Achievement</b><br><br>• Peserta <I>OSN-K IPA tingkat SMP 2023</i><br>• Tertolak <I>PPDB JATIM 2024 Tahap 1 & 2</i></p>
                                 </p>
                             </div>
                         </div>
