--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
                     <div class="col-md-6 mb-3">
                         <div class="card shadow-sm">
                             <div class="card-body">
-                                <p class="card-text"><b>Education</b><br><br>• SDN Boro <I>(2015-2021)</i><br>• SMPN 1 Karangrejo <I>(2021-2024)</I></p>
+                                <p class="card-text">
+                                    <b>Education</b><br /><br />• SDN Boro
+                                    <i>(2015-2021)</i><br />• SMPN 1 Karangrejo
+                                    <i>(2021-2024)</i>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -126,7 +130,9 @@
                         <div class="card shadow-sm">
                             <div class="card-body">
                                 <p class="card-text">
-                                    <p><b>Achievement</b><br><br>• Peserta <I>OSN-K IPA Tingkat SMP 2023</i><br>• Tertolak <I>PPDB JATIM 2024 Tahap 1 & 2</i></p>
+                                    <b>Achievement</b><br /><br />• Peserta
+                                    <i>OSN-K IPA Tingkat SMP 2023</i><br />•
+                                    Tertolak <i>PPDB JATIM 2024 Tahap 1 & 2</i>
                                 </p>
                             </div>
                         </div>
