--- a/index.html
+++ b/index.html
@@ -168,26 +168,7 @@
                                 alt="..."
                             />
                             <div class="card-body">
-                                <p class="card-text">
-                                    Some quick example text to build on the card
-                                    title and make up the bulk of the card's
-                                    content.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-3">
-                        <div class="card shadow-sm">
-                            <img
-                                src="img/projects/p1.png"
-                                class="card-img-top"
-                                alt="..."
-                            />
-                            <div class="card-body">
-                                <p class="card-text">
-                                    Some quick example text to build on the card
-                                    title and make up the bulk of the card's
-                                    content.
+                                <p class="card-text"><b>Portfolio Website</b> adalah sebuah halaman yang menampilkan <b>Portfolio</b> seseorang. <a href="https://github.com/FarendraAugust/Portfolio-web.git" class="text-dark">klik disini</a>
                                 </p>
                             </div>
                         </div>
