--- a/index.html
+++ b/index.html
@@ -168,7 +168,15 @@
                                 alt="..."
                             />
                             <div class="card-body">
-                                <p class="card-text"><b>Portfolio Website</b> adalah sebuah halaman yang menampilkan <b>Portfolio</b> seseorang. <a href="https://github.com/FarendraAugust/Portfolio-web.git" class="text-dark">klik disini</a>
+                                <p class="card-text">
+                                    <b>Portfolio Website</b> adalah sebuah
+                                    halaman yang menampilkan
+                                    <b>Portfolio</b> seseorang.
+                                    <a
+                                        href="https://github.com/FarendraAugust/Portfolio-web.git"
+                                        class="text-dark"
+                                        >klik disini</a
+                                    >
                                 </p>
                             </div>
                         </div>
@@ -237,6 +245,16 @@
                             class="text-dark"
                         >
                             <i class="bi bi-facebook"></i>
+                        </a>
+                    </div>
+                    
+                    <!-- Logo Github -->
+                    <div class="col-1 p-3 text-center">
+                        <a
+                            href="https://github.com/FarendraAugust"
+                            class="text-dark"
+                        >
+                            <i class="bi bi-github"></i>
                         </a>
                     </div>
                 </div>
