--- a/index.html
+++ b/index.html
@@ -257,6 +257,16 @@
                             <i class="bi bi-github"></i>
                         </a>
                     </div>
+                    
+                    <!-- Logo Youtube -->
+                    <div class="col-1 p-3 text-center">
+                        <a
+                            href="https://youtube.com/@fariskhaagustinofarendra?si=tz3EExTv1cBYLIYU"
+                            class="text-dark"
+                        >
+                            <i class="bi bi-youtube"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
