--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <p class="card-text">
                                     <b>Achievement</b><br /><br />• Peserta
                                     <i>OSN-K IPA Tingkat SMP 2023</i><br />•
-                                    Tertolak <i>PPDB JATIM 2024 Tahap 1 & 2</i>
+                                    Tertolak <i>PPDB JATIM 2024 Tahap 1, 2 & 4</i>
                                 </p>
                             </div>
                         </div>
